nullaway_error_FFDB4D22-9DC6-4C5A-80F8-50C846D7B3BC.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/LocalContainerEntityManagerFactoryBean.java:357: error: [NullAway] passing @Nullable parameter 'managerToUse' where @NonNull is required
		this.persistenceUnitInfo = determinePersistenceUnitInfo(managerToUse);
		                                                        ^
    (see http://t.uber.com/nullaway )
